--- a/index.html
+++ b/index.html
@@ -7,9 +7,23 @@
 	<meta name="description" content="Экспофорум конгрессно‑выставочный центр Санкт‑Петербурга">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, maximum-scale=1.0">
+
+	<meta property="og:url" content="https://bogdan-mar.github.io/ekspoforum/">
+	<meta property="og:title" content="Экспофорум">
 	<meta property="og:image" content="img/social.jpg">
+	<meta property="og:description" content="Экспофорум конгрессно‑выставочный центр Санкт‑Петербурга">
+
 	<link rel="icon" href="img/favicon.png">
 	<link rel="stylesheet" href="css/main.min.css">
+
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-158039395-1"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+	  gtag('config', 'UA-158039395-1');
+	</script>
 </head>
 
 <body>
