--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 		<header>
 			<div class="container">
 				<div class="header__wrap">
-					<div class="header__content_left">
+					<div class="wow slideInLeft header__content_left ">
 						<h1>ЭКСПОФОРУМ </h1>
 						<h2>
 							конгрессно&#8209;выставочный центр
@@ -113,7 +113,7 @@
 							</a>
 						</div>
 					</div>
-					<div class="header__content_right">
+					<div class="wow slideInRight header__content_right">
 						<div class="header__item">
 							<div class="header__subtitl">
 								Календарь мероприятий
@@ -186,7 +186,7 @@
 		<section class="side-menu">
 			<div class="container">
 				<div class="side-menu__wrap">
-					<div class="side-menu__item">
+					<div class="wow fadeInUp side-menu__item" data-wow-delay="0.1s" data-wow-offset="150">
 						<div class="side-menu__title">
 							Организаторам
 						</div>
@@ -199,7 +199,7 @@
 							<li><a href="#" class="link_hover">Спорт-центр</a></li>
 						</ul>
 					</div>
-					<div class="side-menu__item">
+					<div class="wow fadeInUp side-menu__item" data-wow-delay="0.2s" data-wow-offset="150">
 						<div class="side-menu__title">
 							Экспонентам
 						</div>
@@ -211,7 +211,7 @@
 							<li><a href="#" class="link_hover">Забронировать гостиницу</a></li>
 						</ul>
 					</div>
-					<div class="side-menu__item">
+					<div class="wow fadeInUp side-menu__item" data-wow-delay="0.3s" data-wow-offset="150">
 						<div class="side-menu__title">
 							Посетителям
 						</div>
@@ -222,7 +222,7 @@
 							<li><a href="#" class="link_hover">Центр деловых контактов</a></li>
 						</ul>
 					</div>
-					<div class="side-menu__item">
+					<div class="wow fadeInUp side-menu__item" data-wow-delay="0.4s" data-wow-offset="150">
 						<div class="side-menu__title">
 							Прессе
 						</div>
@@ -239,8 +239,8 @@
 		<section class="events">
 			<div class="container">
 				<div class="events__top">
-					<h3>Текущие и будущие мероприятия</h3>
-					<a href="#">Все мероприятия
+					<h3 class="wow slideInLeft" data-wow-offset="50">Текущие и будущие мероприятия</h3>
+					<a href="#" class="wow slideInRight" data-wow-offset="50">Все мероприятия
 						<div class="arrow">
 							<svg viewBox="0 0 17 8" fill="none">
 								<path
@@ -250,8 +250,8 @@
 						</div>
 					</a>
 				</div>
-				<div class="events__wrap">
-					<div class="events__item">
+				<div class="events__wrap" >
+					<div class="wow zoomIn events__item" data-wow-offset="100">
 						<a href="#" class="events__img">
 							<img src="img/event_1.jpg" alt="">
 						</a>
@@ -263,7 +263,7 @@
 							Парк интерактивных развлечений
 						</div>
 					</div>
-					<div class="events__item">
+					<div class="wow zoomIn events__item" data-wow-offset="100">
 						<a href="#" class="events__img">
 							<img src="img/event_2.jpg" alt="">
 						</a>
@@ -275,7 +275,7 @@
 							Выставка ювелирных изделий
 						</div>
 					</div>
-					<div class="events__item">
+					<div class="wow zoomIn events__item" data-wow-offset="100">
 						<a href="#" class="events__img">
 							<img src="img/event_3.jpg" alt="">
 						</a>
@@ -287,7 +287,7 @@
 							Выставка-ярмарка народных художественных и ремесел
 						</div>
 					</div>
-					<div class="events__item">
+					<div class="wow zoomIn events__item" data-wow-offset="100">
 						<a href="#" class="events__img">
 							<img src="img/event_4.jpg" alt="">
 						</a>
@@ -299,7 +299,7 @@
 							Специализированная арт&#8209;ярмарка
 						</div>
 					</div>
-					<div class="events__item">
+					<div class="wow zoomIn events__item" data-wow-offset="100">
 						<a href="#" class="events__img">
 							<img src="img/event_5.jpg" alt="">
 						</a>
@@ -311,7 +311,7 @@
 							Конференция для ветеринарных врачей
 						</div>
 					</div>
-					<div class="events__item">
+					<div class="wow zoomIn events__item" data-wow-offset="100">
 						<a href="#" class="events__img">
 							<img src="img/event_6.jpg" alt="">
 						</a>
@@ -330,7 +330,7 @@
 		<section class="news">
 			<div class="container">
 				<div class="news__wrap">
-					<div class="news__left_content">
+					<div class="wow slideInLeft news__left_content" data-wow-offset="100">
 						<div class="news__left_item">
 							<a href="#">
 								<img src="img/news1.jpg" alt="4 700 Парковочных мест">
@@ -342,7 +342,7 @@
 							</a>
 						</div>
 					</div>
-					<div class="news__right_content">
+					<div class="wow slideInRight news__right_content"data-wow-offset="100">
 						<div class="news__top">
 							<h3>Новости</h3>
 							<a href="#">Все новости
@@ -397,7 +397,7 @@
 			<div class="container">
 				<div class="footer__wrap">
 					<div class="footer__column">
-						<div class="footer__item">
+						<div class="wow slideInUp footer__item" data-wow-offset="50">
 							<h4 class="footer__title">
 								О компании
 							</h4>
@@ -416,7 +416,7 @@
 								</li>
 							</ul>
 						</div>
-						<div class="footer__item">
+						<div class="wow slideInUp footer__item" data-wow-offset="50">
 							<h4 class="footer__title">
 								Организаторам
 							</h4>
@@ -437,7 +437,7 @@
 						</div>
 					</div>
 					<div class="footer__column">
-						<div class="footer__item">
+						<div class="wow slideInUp footer__item" data-wow-offset="50">
 							<h4 class="footer__title">
 								Экспонентам
 							</h4>
@@ -456,7 +456,7 @@
 								</li>
 							</ul>
 						</div>
-						<div class="footer__item">
+						<div class="wow slideInUp footer__item" data-wow-offset="50">
 							<h4 class="footer__title">
 								Посетителям
 							</h4>
@@ -477,7 +477,7 @@
 						</div>
 					</div>
 					<div class="footer__column">
-						<div class="footer__item">
+						<div class="wow slideInUp footer__item" data-wow-offset="50">
 							<h4 class="footer__title">
 								Прессе
 							</h4>
@@ -493,7 +493,7 @@
 								</li>
 							</ul>
 						</div>
-						<div class="footer__item">
+						<div class="wow slideInUp footer__item" data-wow-offset="50">
 							<h4 class="footer__title">
 								Приложение
 							</h4>
@@ -670,7 +670,7 @@
 						</div>
 					</div>
 					<div class="footer__column">
-						<div class="footer__item">
+						<div class="wow slideInUp footer__item" data-wow-offset="50">
 							<h4 class="footer__title">
 								Мы в соц. сетях
 							</h4>
@@ -722,7 +722,7 @@
 								</li>
 							</ul>
 						</div>
-						<div class="footer__item footer__item_subscribe">
+						<div class="wow slideInUp footer__item footer__item_subscribe" data-wow-offset="50">
 							<h4 class="footer__title">
 								Подписка на новости
 							</h4>
