--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 	</div>
 	
 	<div class="main_wrapper">
-		<div class="top_menu">
+		<div class="wow slideInDown top_menu">
 			<div class="top_logo">
 				<svg width="176" height="24" viewBox="0 0 176 24" fill="none">
 					<rect width="175.273" height="24" fill="url(#pattern_top)" />
