--- a/index.html
+++ b/index.html
@@ -15,15 +15,6 @@
 
 	<link rel="icon" href="img/favicon.png">
 	<link rel="stylesheet" href="css/main.min.css">
-
-	<!-- Global site tag (gtag.js) - Google Analytics -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-158039395-1"></script>
-	<script>
-	  window.dataLayer = window.dataLayer || [];
-	  function gtag(){dataLayer.push(arguments);}
-	  gtag('js', new Date());
-	  gtag('config', 'UA-158039395-1');
-	</script>
 </head>
 
 <body>
@@ -47,7 +38,7 @@
 					</defs>
 				</svg>
 			</div>
-			<nav>
+			<nav id="nav">
 				<ul>
 					<li>
 						<a href="#" class="nav_link_hover">О комплексе</a>
@@ -115,7 +106,7 @@
 					</div>
 					<div class="wow slideInRight header__content_right">
 						<div class="header__item">
-							<div class="header__subtitl">
+							<div class="header__subtitle">
 								Календарь мероприятий
 							</div>
 							<div class="more_info">
@@ -131,7 +122,7 @@
 							</div>
 						</div>
 						<div class="header__item">
-							<div class="header__subtitl">
+							<div class="header__subtitle">
 								Как добраться до Экспофорума
 							</div>
 							<div class="more_info">
@@ -147,7 +138,7 @@
 							</div>
 						</div>
 						<div class="header__item">
-							<div class="header__subtitl">
+							<div class="header__subtitle">
 								Онлайн-заявка на организацию мероприятия
 							</div>
 							<div class="more_info">
@@ -163,7 +154,7 @@
 							</div>
 						</div>
 						<div class="header__item">
-							<div class="header__subtitl">
+							<div class="header__subtitle">
 								План и инфраструктура комплекса
 							</div>
 							<div class="more_info">
@@ -342,7 +333,7 @@
 							</a>
 						</div>
 					</div>
-					<div class="wow slideInRight news__right_content"data-wow-offset="100">
+					<div class="wow slideInRight news__right_content" data-wow-offset="100">
 						<div class="news__top">
 							<h3>Новости</h3>
 							<a href="#">Все новости
@@ -740,12 +731,11 @@
 				</div>
 			</div>
 		</footer>
-	</div>
 
+		<div class="overlay"></div>
+	</div>
 
 	<script src="js/libs.min.js"></script>
 
-
 </body>
-
 </html>
